@@ -1,8 +1,9 @@
 <?php
 //this script handle the microconroller http requests.
+//we used a fifo of tasks like on/off/temp.
 include_once 'includes/connection.php';
 
-    $sql='SELECT * FROM tasks ORDER BY id asc LIMIT 1;';
+    $sql='SELECT * FROM tasks ORDER BY id asc LIMIT 1;'; //return the first task from fifo
     $result=mysqli_query($conn,$sql);
     $resultCheck=mysqli_num_rows($result);
     if($resultCheck>0)
@@ -10,7 +11,7 @@ include_once 'includes/connection.php';
 	    $row=mysqli_fetch_assoc($result);
         $Str=$row["task"];
         do{
-        $sql='DELETE FROM tasks WHERE id='.$row["id"].';';
+        $sql='DELETE FROM tasks WHERE id='.$row["id"].';'; //delete it after use.
           $result=mysqli_query($conn,$sql);
         }while(!$result);
         echo($Str);
